@@ -1,5 +1,10 @@
 2009-06-17  Richard Guenther  <rguenther@suse.de>
 
+	PR middle-end/40460
+	* g++.dg/torture/pr40460.C: New testcase.
+
+2009-06-17  Richard Guenther  <rguenther@suse.de>
+
 	PR middle-end/40389
 	* g++.dg/torture/pr40389.C: New testcase.
 
