@@ -1,5 +1,13 @@
 2009-06-17  Richard Guenther  <rguenther@suse.de>
 
+	PR middle-end/40460
+	* tree-chrec.h (build_polynomial_chrec): If we cannot determine
+	if there is no evolution of left in the loop bail out.
+	* tree-chrec.c (chrec_fold_multiply_poly_poly): CSE one
+	chrec_fold_multiply.
+
+2009-06-17  Richard Guenther  <rguenther@suse.de>
+
 	PR middle-end/40389
 	* tree-ssa-operands.c (parse_ssa_operands): Add NRV results
 	to the addresses taken bitmap.
